tests/ui/proc-macro/attribute.stderr
error[E0539]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:9:1
   |
LL | #[proc_macro_derive]
   | ^^^^^^^^^^^^^^^^^^^^
   | |
   | expected this to be a list
   | help: must be of the form: `#[proc_macro_derive(TraitName, /*opt*/ attributes(name1, name2, ...))]`

error[E0539]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:14:1
   |
LL | #[proc_macro_derive = ""]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   | |
   | expected this to be a list
   | help: must be of the form: `#[proc_macro_derive(TraitName, /*opt*/ attributes(name1, name2, ...))]`

error[E0539]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:19:1
   |
LL | #[proc_macro_derive(d3, a, b)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^-^^^^^
   | |                       |
   | |                       the only valid argument here is `attributes`
   | help: must be of the form: `#[proc_macro_derive(TraitName, /*opt*/ attributes(name1, name2, ...))]`

error[E0565]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:24:1
   |
LL | #[proc_macro_derive(d4, attributes(a), b)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^-^^
   | |                                      |
   | |                                      didn't expect any arguments here
   | help: must be of the form: `#[proc_macro_derive(TraitName, /*opt*/ attributes(name1, name2, ...))]`

error[E0565]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:29:1
   |
LL | #[proc_macro_derive("a")]
   | ^^^^^^^^^^^^^^^^^^^^---^^
   | |                   |
   | |                   didn't expect a literal here
   | help: must be of the form: `#[proc_macro_derive(TraitName, /*opt*/ attributes(name1, name2, ...))]`

error[E0565]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:34:1
   |
LL | #[proc_macro_derive(d6 = "")]
   | ^^^^^^^^^^^^^^^^^^^^^^^----^^
   | |                      |
   | |                      didn't expect any arguments here
   | help: must be of the form: `#[proc_macro_derive(TraitName, /*opt*/ attributes(name1, name2, ...))]`

error[E0539]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:39:1
   |
LL | #[proc_macro_derive(m::d7)]
   | ^^^^^^^^^^^^^^^^^^^^-----^^
   | |                   |
   | |                   expected a valid identifier here
   | help: must be of the form: `#[proc_macro_derive(TraitName, /*opt*/ attributes(name1, name2, ...))]`

error[E0565]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:44:1
   |
LL | #[proc_macro_derive(d8(a))]
   | ^^^^^^^^^^^^^^^^^^^^^^---^^
   | |                     |
   | |                     didn't expect any arguments here
   | help: must be of the form: `#[proc_macro_derive(TraitName, /*opt*/ attributes(name1, name2, ...))]`

error[E0539]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:49:1
   |
LL | #[proc_macro_derive(self)]
   | ^^^^^^^^^^^^^^^^^^^^----^^
   | |                   |
   | |                   expected a valid identifier here
   | help: must be of the form: `#[proc_macro_derive(TraitName, /*opt*/ attributes(name1, name2, ...))]`

error[E0539]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:57:1
   |
LL | #[proc_macro_derive(d11, a)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^-^^
   | |                        |
   | |                        the only valid argument here is `attributes`
   | help: must be of the form: `#[proc_macro_derive(TraitName, /*opt*/ attributes(name1, name2, ...))]`

error[E0539]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:62:1
   |
LL | #[proc_macro_derive(d12, attributes)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^----------^^
   | |                        |
   | |                        expected this to be a list
   | help: must be of the form: `#[proc_macro_derive(TraitName, /*opt*/ attributes(name1, name2, ...))]`

error[E0539]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:67:1
   |
LL | #[proc_macro_derive(d13, attributes("a"))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---^^^
   | |                                   |
   | |                                   expected a valid identifier here
   | help: must be of the form: `#[proc_macro_derive(TraitName, /*opt*/ attributes(name1, name2, ...))]`

error[E0565]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:72:1
   |
LL | #[proc_macro_derive(d14, attributes(a = ""))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^----^^^
   | |                                     |
   | |                                     didn't expect any arguments here
   | help: must be of the form: `#[proc_macro_derive(TraitName, /*opt*/ attributes(name1, name2, ...))]`

error[E0539]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:77:1
   |
LL | #[proc_macro_derive(d15, attributes(m::a))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^----^^^
   | |                                   |
   | |                                   expected a valid identifier here
   | help: must be of the form: `#[proc_macro_derive(TraitName, /*opt*/ attributes(name1, name2, ...))]`

error[E0565]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:82:1
   |
LL | #[proc_macro_derive(d16, attributes(a(b)))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---^^^
   | |                                    |
   | |                                    didn't expect any arguments here
   | help: must be of the form: `#[proc_macro_derive(TraitName, /*opt*/ attributes(name1, name2, ...))]`

error[E0539]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:87:1
   |
LL | #[proc_macro_derive(d17, attributes(self))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^----^^^
   | |                                   |
   | |                                   expected a valid identifier here
   | help: must be of the form: `#[proc_macro_derive(TraitName, /*opt*/ attributes(name1, name2, ...))]`

error: aborting due to 16 previous errors

Some errors have detailed explanations: E0539, E0565.
For more information about an error, try `rustc --explain E0539`.
